rename quota to amount